tests/integration/libuild/errors/import-inexist-module/libuild.config.ts
export default {
  input: {
    main: './index.ts',
  },
};
